--- a/HTML/CSS/practiceQsD1.html
+++ b/HTML/CSS/practiceQsD1.html
@@ -12,7 +12,10 @@
     <button>Need Help</button> -->
 
     <!-- <h1>Apna <br> College</h1> -->
-     <h1 id="greet" class="myclass">Hello!</h1>
-    
+     <!-- <h1 id="greet" class="myclass">Hello!</h1>
+
+     -->
+
+     
 </body>  
 </html>   
