--- a/HTML/CSS/practiceR.html
+++ b/HTML/CSS/practiceR.html
@@ -8,11 +8,14 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div id="outer">
+    <!-- <div id="outer">
         <div class="inner" id="red"></div>
         <div class="inner" id="yellow"></div>
         <div class="inner" id="green"></div>
-    </div>
-    
+    </div> -->
+    <h2>Heading</h2>
+    <h2>Heading</h2>
+    <span>Span 1</span>
+    <span>Span 2</span>     
 </body>
 </html>
