--- a/HTML/CSS/practiceR.html
+++ b/HTML/CSS/practiceR.html
@@ -13,9 +13,12 @@
         <div class="inner" id="yellow"></div>
         <div class="inner" id="green"></div>
     </div> -->
-    <h2>Heading</h2>
+    <!-- <h2>Heading</h2>
     <h2>Heading</h2>
     <span>Span 1</span>
-    <span>Span 2</span>     
+    <span>Span 2</span>      -->
+    <div></div>
+    <div></div>
+    <div></div>
 </body>
 </html>
