--- a/HTML/CSS/practiceR.html
+++ b/HTML/CSS/practiceR.html
@@ -17,8 +17,14 @@
     <h2>Heading</h2>
     <span>Span 1</span>
     <span>Span 2</span>      -->
+    <!-- <div></div>
     <div></div>
-    <div></div>
-    <div></div>
+    <div></div> -->
+    <h1>Heading</h1>
+    <div id="outer">
+        <div id="inner">
+
+        </div> 
+    </div>
 </body>
 </html>
