--- a/HTML/CSS/practiceR.html
+++ b/HTML/CSS/practiceR.html
@@ -20,11 +20,19 @@
     <!-- <div></div>
     <div></div>
     <div></div> -->
-    <h1>Heading</h1>
+    <!-- <h1>Heading</h1>
     <div id="outer">
         <div id="inner">
 
         </div> 
-    </div>
+    </div> -->
+    <div id="outer">
+        This is outer.
+        <div id="inner">
+            This is inner.
+        </div>
+
+    </div> 
+   
 </body>
 </html>
