--- a/HTML/CSS/practiceR.html
+++ b/HTML/CSS/practiceR.html
@@ -26,13 +26,15 @@
 
         </div> 
     </div> -->
-    <div id="outer">
+    <!-- <div id="outer">
         This is outer.
         <div id="inner">
             This is inner.
         </div>
 
-    </div> 
+    </div>  -->
+     <button>Click Me</button>
+
    
 </body>
 </html>
