--- a/HTML/CSS/practiceR.html
+++ b/HTML/CSS/practiceR.html
@@ -33,7 +33,18 @@
         </div>
 
     </div>  -->
-     <button>Click Me</button>
+     <!-- <button>Click Me</button> -->
+      section 
+      <div>
+        div1
+        <div>
+            div2
+            <div>
+                div3
+
+            </div>
+        </div>
+      </div>
 
    
 </body>
