--- a/HTML/CSS/practicePart3.html
+++ b/HTML/CSS/practicePart3.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice Question</title>
-    <link rel="stylesheet" href="style2.css"/>
+    <link rel="stylesheet" href="stylePart.css"/>
 </head>
 <body>
-    <div id class="Box">My Box</div> <br>
+    <div id class="Box">My Box</div> <br> <br>
     <div class="Box">My Box</div>
     <div class="Box">My Box</div>
     <div class="Box">My Box</div>
