--- a/HTML/CSS/days13.html
+++ b/HTML/CSS/days13.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div></div>
-    <div id="opacity">
+    <!-- <div id="opacity">
         <h3>heading</h3>
         <button>click me!</button>
-    </div>
+    </div> -->
     
 </body>
 </html>
