--- a/HTML/CSS/days13.html
+++ b/HTML/CSS/days13.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style13.css"/>
 </head>
 <body>
-    <div></div>
+    <div>Box</div>
     <!-- <div id="opacity">
         <h3>heading</h3>
         <button>click me!</button>
