--- a/HTML/CSS/days13.html
+++ b/HTML/CSS/days13.html
@@ -7,11 +7,25 @@
     <link rel="stylesheet" href="style13.css"/>
 </head>
 <body>
-    <div>Box</div>
+    <!-- <div>Box</div> -->
     <!-- <div id="opacity">
         <h3>heading</h3>
         <button>click me!</button>
     </div> -->
+    <div class="card">
+        <img src="man.jpg" alt="man"/>
+        <div class="desc">
+            <h3>Rahul Kumar</h3>
+            <p>Data Analyst</p>
+        </div>
+    </div>
+    <div class="card">
+        <img src="woman.jpg" alt="woman"/>
+        <div class="desc">
+            <h3>Neha Sharma</h3>
+            <p>Software Engineer</p>
+        </div>
+    </div>
     
 </body>
 </html>
