--- a/HTML/CSS/days13.html
+++ b/HTML/CSS/days13.html
@@ -12,7 +12,7 @@
         <h3>heading</h3>
         <button>click me!</button>
     </div> -->
-    <div class="card">
+    <!-- <div class="card">
         <img src="man.jpg" alt="man"/>
         <div class="desc">
             <h3>Rahul Kumar</h3>
@@ -26,6 +26,13 @@
             <p>Software Engineer</p>
         </div>
     </div>
-    
+     -->
+    <div class="face">
+        <div class="mouth"></div>
+        <div class="eyes">
+            <div class="left-eye"></div>
+            <div class="right-eye"></div>
+        </div>
+    </div>
 </body>
 </html>
