--- a/HTML/CSS/sheryians.html
+++ b/HTML/CSS/sheryians.html
@@ -16,10 +16,23 @@
 
      </div> -->
 
-     <div id="parent">
+     <!-- <div id="parent">
         <h1>Hello , I am Dileep Yadav</h1>
         <h4>Village:- Ghaghwa jagdish !!</h4>
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deserunt, quo!</p>
+
+     </div> -->
+     <!-- <h1>Hello guys kaise ho  aap </h1> -->
+
+     <div id="parent">
+      <div id="child1"></div>
+      <div id="child2"></div>
+      <div id="child3"></div>
+      <div id="child4"></div>
+      <!-- <div id="child5"></div>
+      <div id="child6"></div>
+      <div id="child7"></div>
+      <div id="child8"></div> -->
 
      </div>
      
