--- a/HTML/CSS/index (1).html
+++ b/HTML/CSS/index (1).html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS</title>
-    <link rel="stylesheet" href="style15.css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Project</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
-
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -17,28 +15,12 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
     />
-</head>
-<body>
-     <!-- <h1>Grid Playground</h1>
-    <div class="container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div> 
-        <div class="item">4</div>
-        <div class="item">5</div> 
-    </div> -->
-    <!-- <h1>Animations</h1>
-    <div class="box">This is a box</div> -->
-
-    <!-- <h1>Media Queries Demo</h1> -->
-     <!-- <h1>Z-index</h1>
-     <div class="box one">1</div>
-     <div class="box two">2</div>
-     <div class="box three">3</div> -->
-     <div class="main_box">
+  </head>
+  <body>
+    <div class="main_box">
       <input type="checkbox" id="check" />
       <div class="btn_one">
-        <label for="check">
+        <label for="check" style="color: white">
           <i class="fa-solid fa-bars"></i>
         </label>
       </div>
@@ -97,8 +79,5 @@
         </div>
       </div>
     </div>
-</body>
+  </body>
 </html>
-
-
- 
