--- a/.vscode/JavaScript/index.html
+++ b/.vscode/JavaScript/index.html
@@ -7,7 +7,11 @@
     
 </head>
 <body>
-   
+    <h1>To do App</h1>
+    <h3>Enter"lists" to show all tasks</h3>
+    <h3>Enter"lists" to add a task</h3>
+    <h3>Enter"lists" to remove a task</h3>
+    <h3>Enter"lists" to quit todo</h3>
     <script src="app.js"></script>
 </body>
 </html>
